progress bar* remove skills background added individual bg-image in flex box

--- a/index.html
+++ b/index.html
@@ -75,30 +75,31 @@
                         </div>
                         </div>
                     </div>
-                    <div class="skills_progress">
+                    <div id="progress_bar" class="skills_progress">
                         <div class="professional">
                             <div class="skill_types"><p class="prof_skills">Professional Skills</p></div>
                             <div class="program">
-                                <div class="php">
-                                <label for="php">PHP:</label><br>
-                                <progress id="php" value="45" max="100"></progress>
+                                WordPress
+                                <div class="meter">
+                                    <span style="width:80%;"><span id="anim_p_1" class="progress"></span></span>
                                 </div>
-                                <div class="wordpress">
-                                <label for="wordpress">WordPress:</label><br>
-                                    <progress id="wordpress" value="80" max="100"></progress>
+                                PHP
+                                <div class="meter">
+                                    <span style="width:45%;"><span id="anim_p_2" class="progress"></span></span>
                                 </div>
-                                <div class="html">
-                                    <label for="html">HTML:</label><br>
-                                    <progress id="html" value="80" max="100"></progress>
+                                JavaScript
+                                <div class="meter">
+                                    <span style="width:30%;"><span id="anim_p_3" class="progress"></span></span>
                                 </div>
-                                <div class="sql">
-                                    <label for="sql">SQL:</label><br>
-                                    <progress id="sql" value="40" max="100"></progress>
+                                CSS
+                                <div class="meter">
+                                    <span style="width:60%;"><span id="anim_p_4" class="progress"></span></span>
                                 </div>
-                                <div class="v_js">
-                                    <label for="v_js">Javascript:</label><br>
-                                    <progress id="v_js" value="40" max="100"></progress>
+                                HTML
+                                <div class="meter">
+                                    <span style="width:70%;"><span id="anim_p_5" class="progress"></span></span>
                                 </div>
+                                
                             </div>
                         </div>
                         <div class="people">
