--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
                                     <li>Positive attitude</li>
                                     <li>Assertiveness</li>
                                     <li>Time management</li>
+                                    <li>Patience</li>
                                 </ul>
                             </div>
                         </div>
