*New images and added plugin link

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                     <li><a href="#skills">What I do</a></li>
                     <li><a href="#portfolio">Portfolio</a></li>
                     <li><a href="#projects">Projects</a></li>
+                    <li><a href="#plugins">Plugins</a></li>
                     <li id="contact_pop_up" ><a href="#"><button>Contact me</button></a></li>
                 </ul>
             </nav>
@@ -123,8 +124,11 @@
                         <div class="lang"></div>
                     </div>
                 </div>
-                <div id="portfolio" class="portfolio_grid"></div>
-                <div id="projects" class="plugins_column"></div>
+                <div id="portfolio" class="portfolio_grid">
+                    
+                </div>
+                <div id="projects" class="project_section"></div>
+                <div id="plugins" class="plugin_section"></div>
             </div>
         </main>
 
