--- a/index.html
+++ b/index.html
@@ -129,7 +129,33 @@
 
         <footer>
             <div class="copyright"></div>
-            <div class="contact_details"></div>
+            <div class="contact_details">
+                <div class="contact_options">
+
+                </div>
+                <div class="contact_form">
+                    <form name="contact" id="my-form" netlify-honeypot="bot-field" method="POST" data-netlify="true">
+                        <p class="hidden">
+                            <label>Don’t fill this out if you’re human: <input name="bot-field" /></label>
+                          </p>
+                        <p>
+                        <label>Your Name: <input type="text" name="name" /></label>   
+                        </p>
+                        <p>
+                        <label>Your Email: <input type="email" name="email" /></label>
+                        </p>
+                        <p>
+                            <label>Subject: <input type="text" name="subject" /></label>
+                        </p>
+                        <p>
+                        <label>Message: <textarea name="message"></textarea></label>
+                        </p>
+                        <p>
+                        <button type="submit">Send</button>
+                        </p>
+                    </form>
+                </div>
+            </div>
         </footer>
         <script src="script.js" async defer></script>
     </body>
