--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <meta name="description" content="Web developer with a love for WordPress and a passion for simplicity. I am always developing and motivated to create meaningful work.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./css/shalomt.css">
+        <link rel="stylesheet" href="./css/form.css">
         <link rel="stylesheet" href="general.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -131,7 +132,10 @@
             <div class="copyright"></div>
             <div class="contact_details">
                 <div class="contact_options">
-
+                    <p class="cf_email"><i></i><a href="mailto:tshalom01@gmail.com">tshalom01@gmail.com</a></p>
+                    <p class="cf_wordpress"><i></i><a href="http://wordpress.org" target="_blank" rel="noopener noreferrer">@Shalomt</a></p>
+                    <p class="cf_twitter"><i></i><a href="http://twitter.com/" target="_blank" rel="noopener noreferrer">@taiwo_shalom</a></p>
+                    <p class="cf_linkedin"><i></i><a href="http://linkedin.com" target="_blank" rel="noopener noreferrer">Shalom Taiwo</a></p>
                 </div>
                 <div class="contact_form">
                     <form name="contact" id="my-form" netlify-honeypot="bot-field" method="POST" data-netlify="true">
