--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                             <label>Subject: <input type="text" name="subject" /></label>
                         </p>
                         <p>
-                        <label>Message: <textarea name="message"></textarea></label>
+                        <label>Message: <textarea rows="5" name="message"></textarea></label>
                         </p>
                         <p>
                         <button type="submit">Send</button>
