--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <li><a href="#">Home</a></li>
                     <li><a href="#skills">What I do</a></li>
                     <li><a href="#plugins">Plugins</a></li>
-                    <li id="contact_pop_up" ><a href="#"><button>Contact me</button></a></li>
+                    <li id="contact_pop_up" ><a href="#contact"><button>Contact me</button></a></li>
                 </ul>
             </nav>
         </header>
@@ -58,11 +58,11 @@
                         <img class="proile_img" src="assets/shalomt_profile_cartoon.png" alt="" srcset="">
                     </div>
                 </div>
-                <div class="skills_column">
+                <div id="skills" class="skills_column">
                     <div class="col_title">
                         <p class="serv_colhead">Skills</p>
                     </div>
-                    <div id="skills" class="skills">
+                    <div class="skills">
                         <div class="serv_title"><i class="fas fa-long-arrow-alt-left fa-1x"></i>  What I do</div>
                         <div class="s_bg">
                         <div class="s_col1">
@@ -126,14 +126,17 @@
                 <div id="projects" class="project_section"></div>
                 <div id="plugins" class="plugin_section"></div>
             </div>
+            <div id="contact" style="padding: 10px;"></div>
+            <div class="contact_bg">
             <div class="contact_details">
                 <div class="contact_options">
-                    <p class="cf_email"><i></i><a href="mailto:tshalom01@gmail.com">tshalom01@gmail.com</a></p>
-                    <p class="cf_wordpress"><i></i><a href="http://wordpress.org" target="_blank" rel="noopener noreferrer">@Shalomt</a></p>
-                    <p class="cf_twitter"><i></i><a href="http://twitter.com/" target="_blank" rel="noopener noreferrer">@taiwo_shalom</a></p>
-                    <p class="cf_linkedin"><i></i><a href="http://linkedin.com" target="_blank" rel="noopener noreferrer">Shalom Taiwo</a></p>
+                    <p class="cf_email"><i class="fas fa-envelope fa-2x"></i><a href="mailto:tshalom01@gmail.com">tshalom01@gmail.com</a></p>
+                    <p class="cf_wordpress"><i class="fab fa-wordpress fa-2x"></i><a href="http://wordpress.org" target="_blank" rel="noopener noreferrer">@Shalomt</a></p>
+                    <p class="cf_twitter"><i class="fab fa-twitter fa-2x"></i><a href="http://twitter.com/" target="_blank" rel="noopener noreferrer">@taiwo_shalom</a></p>
+                    <p class="cf_linkedin"><i class="fab fa-linkedin-in fa-2x"></i><a href="http://linkedin.com" target="_blank" rel="noopener noreferrer">Shalom Taiwo</a></p>
                 </div>
                 <div class="contact_form">
+                    <h1>Send Me a Message</h1>
                     <form name="contact" id="my-form" netlify-honeypot="bot-field" method="POST" data-netlify="true">
                         <p class="hidden">
                             <label>Don’t fill this out if you’re human: <input name="bot-field" /></label>
@@ -151,10 +154,11 @@
                         <label>Message: <textarea rows="5" name="message"></textarea></label>
                         </p>
                         <p>
-                        <button type="submit">Send</button>
+                        <button type="submit">Send Message</button>
                         </p>
                     </form>
                 </div>
+            </div>
             </div>
         </main>
 
