--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                     <form name="contact" id="my-form" netlify-honeypot="bot-field" method="POST" data-netlify="true">
                         <p class="hidden">
                             <label>Don’t fill this out if you’re human: <input name="bot-field" /></label>
-                          </p>
+                        </p>
                         <p>
                         <label>Your Name: <input type="text" name="name" /></label>   
                         </p>
@@ -163,7 +163,7 @@
         </main>
 
         <footer>
-            <div class="copyright"></div>
+            <div class="copyright">&copy; Copyright 2022, Shalom Taiwo | All Rights Reserved</div>
         </footer>
         <script src="script.js" async defer></script>
     </body>
