--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
         <div class="header">
         <header>
             <div class="nav_logo">
-                <a href="#"><img class="logo" src="assets/shalomt_logo.png" alt="shalomt_logo"></a>
+                <a href="/index.html"><img class="logo" src="assets/shalomt_logo.png" alt="shalomt_logo"></a>
             </div>
             <nav class="menu">
                 <ul>
-                    <li><a href="#">Home</a></li>
+                    <li><a href="/index.html">Home</a></li>
                     <li><a href="#skills">What I do</a></li>
-                    <li><a href="#plugins">Plugins</a></li>
+                    <li><a href="/wbps.html">Plugins</a></li>
                     <li id="contact_pop_up" ><a href="#contact"><button>Contact me</button></a></li>
                 </ul>
             </nav>
