Add plugin links

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./css/shalomt.css">
         <link rel="stylesheet" href="./css/form.css">
+        <link rel="stylesheet" href="./css/wbps.css">
         <link rel="stylesheet" href="general.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -31,7 +32,7 @@
                 <ul>
                     <li><a href="/index.html">Home</a></li>
                     <li><a href="#skills">What I do</a></li>
-                    <li><a href="/wbps.html">Plugins</a></li>
+                    <li><a href="#plugins">Plugins</a></li>
                     <li id="contact_pop_up" ><a href="#contact"><button>Contact me</button></a></li>
                 </ul>
             </nav>
@@ -123,8 +124,28 @@
                         <div class="lang"></div>
                     </div>
                 </div>
-                <div id="projects" class="project_section"></div>
-                <div id="plugins" class="plugin_section"></div>
+                <div id="projects" class="project_section">
+                    
+                </div>
+                <div id="plugins" class="plugin_section">
+                    <div class="wbps_page">
+                        <div class="wbps_desc">
+                        <h3 class="wbps_h3">Woocommerce Book Preview</h3>
+                        <p class="wbps_short_desc">
+                            With Woocommerce Book Preview, show your customers a 
+                            PDF or text-based preview of your books to increase your 
+                            conversion rate and get more sales.
+                        </p>
+                        </div>
+                        <div class="wbps_links">
+                        <button class="wbps_doc_link1">Download on WordPress.org</button>
+                        <button class="wbps_doc_link2"><a href="/wbps.html">How it works</a></button>
+                        </div>
+                    </div>
+                    <div class="wbps_logo">
+                        <a href="./wbps.html" class="wbps_logo_"><img src="./assets/woocommerce_book_preview.png" alt="" srcset=""></a>
+                    </div>
+                </div>
             </div>
             <div id="contact" style="padding: 10px;"></div>
             <div class="contact_bg">
@@ -166,5 +187,6 @@
             <div class="copyright">&copy; Copyright 2022, Shalom Taiwo | All Rights Reserved</div>
         </footer>
         <script src="script.js" async defer></script>
+        <script src="/js/subscribe.js"></script>
     </body>
 </html>
