--- a/wbps.html
+++ b/wbps.html
@@ -26,7 +26,7 @@
                 <ul>
                     <li><a href="/index.html">Home</a></li>
                     <li><a href="/index.html#skills">What I do</a></li>
-                    <li><a href="/wbps.html">Plugins</a></li>
+                    <li><a href="/index.html#plugins">Plugins</a></li>
                     <li id="contact_pop_up" ><a href="/index.html#contact"><button>Contact me</button></a></li>
                 </ul>
             </nav>
