--- a/index.html
+++ b/index.html
@@ -147,6 +147,11 @@
                     </div>
                 </div>
             </div>
+            <div class="subscribe">
+                <form action="" method="post" id="send" data-netlify="false">
+                    <input name="send" type="submit">
+                </form>
+            </div>
             <div id="contact" style="padding: 10px;"></div>
             <div class="contact_bg">
             <div class="contact_details">
