--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                 </div>
             </div>
             <div class="subscribe">
-                <form action="" method="post" id="send" data-netlify="false">
+                <form action="" method="post" id="send">
                     <input name="send" type="submit">
                 </form>
             </div>
