--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
         <link rel="stylesheet" href="./css/shalomt.css">
         <link rel="stylesheet" href="./css/form.css">
         <link rel="stylesheet" href="./css/wbps.css">
+        <link rel="stylesheet" href="./css/subscribe.css">
         <link rel="stylesheet" href="general.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.7.2/css/all.css">
+    <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
     <script src="https://js.moonmail.io/sdk/latest/moonmail.umd.js"></script>
 </head>
     <body>
@@ -148,12 +150,17 @@
                     </div>
                 </div>
             </div>
-            <div class="subscribe">
-                
-                <div class="subs_form">
-                 <!--JB Tracker--> <script type="text/javascript"> var _paq = _paq || []; (function(){ if(window.apScriptInserted) return; _paq.push(['clientToken', 'P%2bsIjEMd6oQ%3d']); var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0]; g.type='text/javascript'; g.async=true; g.defer=true; g.src='https://prod.benchmarkemail.com/tracker.bundle.js'; s.parentNode.insertBefore(g,s); window.apScriptInserted=true;})(); </script> <!--/JB Tracker--> <!-- BEGIN: Benchmark Email Signup Form Code -->
-<script type="text/javascript" id="lbscript1627484" src="https://lb.benchmarkemail.com//code/lbformnew.js?mFcQnoBFKMS%252B5EupoZ4ckajgVtVj7bhtiXkbaiy38ibHOMuANufEtQ%253D%253D"></script><noscript>Please enable JavaScript <br /><div style="padding-top:5px;font-family:Arial,Helvetica,sans-serif;font-size:10px;color:#999999;"></div></noscript>
-<!-- END: Benchmark Email Signup Form Code -->
+<div>
+<div class="subs-wrapper">
+    <form action="" id="subs-form" netlify-honeypot="bot-field" method="POST" data-netlify="true">
+        <p class="hidden">
+            <label>Don’t fill this out if you’re human: <input name="bot-field" /></label>
+        </p>
+        <label class="subs-label"><i class="green x1p4 ionicons ion-ios-email-outline"></i></label>
+                <input class="subs-input" type="email" placeholder="youremail@domain.com"/>
+                <button type="submit" class="subs-button">Subscribe</button>
+                </form>
+</div>
 </div>
 <div class="subs_text"></div>
             </div>
@@ -197,5 +204,9 @@
             <div class="copyright">&copy; Copyright 2022, Shalom Taiwo | All Rights Reserved</div>
         </footer>
         <script src="script.js" async defer></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+        <!-- Start of HubSpot Embed Code -->
+<script type="text/javascript" id="hs-script-loader" async defer src="//js-eu1.hs-scripts.com/25422389.js"></script>
+<!-- End of HubSpot Embed Code -->
     </body>
 </html>
