update subscribe form

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.7.2/css/all.css">
     <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-    <script src="https://js.moonmail.io/sdk/latest/moonmail.umd.js"></script>
+    <link rel="stylesheet" href="https://s.pageclip.co/v1/pageclip.css" media="screen">
+
 </head>
     <body>
         <!--[if lt IE 7]>
@@ -152,13 +153,11 @@
             </div>
 <div>
 <div class="subs-wrapper">
-    <form action="" id="subs-form" netlify-honeypot="bot-field" method="POST" data-netlify="true">
-        <p class="hidden">
-            <label>Don’t fill this out if you’re human: <input name="bot-field" /></label>
-        </p>
+    <form action="https://send.pageclip.co/tKczHfTD79GkjVMF4dQ5lz279qNSzxcD" class="pageclip-form" method="post">
+
         <label class="subs-label"><i class="green x1p4 ionicons ion-ios-email-outline"></i></label>
-                <input class="subs-input" type="email" placeholder="youremail@domain.com"/>
-                <button type="submit" class="subs-button">Subscribe</button>
+                <input class="subs-input" type="email" name="subs-email" placeholder="youremail@domain.com" required/>
+                <button type="submit" class="subs-button button pageclip-form__submit--dark-loader">Subscribe</button>
                 </form>
 </div>
 </div>
@@ -208,5 +207,7 @@
         <!-- Start of HubSpot Embed Code -->
 <script type="text/javascript" id="hs-script-loader" async defer src="//js-eu1.hs-scripts.com/25422389.js"></script>
 <!-- End of HubSpot Embed Code -->
+<script src="https://s.pageclip.co/v1/pageclip.js" charset="utf-8"></script>
+
     </body>
 </html>
