--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
         <label class="subs-label"><i class="green x1p4 ionicons ion-ios-email-outline"></i></label>
                 <input class="subs-input" type="email" name="subs-email" placeholder="youremail@domain.com" required/>
-                <button type="submit" class="subs-button button pageclip-form__submit--dark-loader">Subscribe</button>
+                <button type="submit" class="subs-button button pageclip-form__submit--dark-loader"><span>Submit</span></button>
                 </form>
 </div>
 </div>
