--- a/index.html
+++ b/index.html
@@ -151,7 +151,10 @@
                     </div>
                 </div>
             </div>
-<div>
+<div id="subs-bg">
+    <div>
+        <h1>Subscribe to our Newsletter</h1>
+    </div>
 <div class="subs-wrapper">
     <form action="https://send.pageclip.co/tKczHfTD79GkjVMF4dQ5lz279qNSzxcD" class="pageclip-form" method="post">
 
