--- a/index.html
+++ b/index.html
@@ -33,13 +33,20 @@
                 <a href="/index.html"><img class="logo" src="assets/shalomt_logo.png" alt="shalomt_logo"></a>
             </div>
             <nav class="menu">
-                <ul>
+                <ul class="desktop_menu">
                     <li><a href="/index.html">Home</a></li>
                     <li><a href="#skills">What I do</a></li>
                     <li><a href="#plugins">Plugins</a></li>
                     <li id="contact_pop_up" ><a href="#contact"><button>Contact me</button></a></li>
                 </ul>
+                <ul class="mobile_menu">
+                    <li><a href="/index.html">Home</a></li>
+                    <li><a href="#skills">Skills</a></li>
+                    <li><a href="#plugins">Plugins</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
             </nav>
+        
         </header>
     </div>
 
