Final touch up!

--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
                         <p class="about_me">Web developer with a love for WordPress and a passion for simplicity.
                             I am always developing and motivated to create meaningful work.</p>
                         <div class="socials">
-                            <a href="" class="twitter"><i class="fab fa-twitter fa-1x"></i></a>
-                            <a href="" class="linkedin"><i class="fab fa-linkedin-in fa-1x"></i></a>
-                            <a href="" class="wordpress"><i class="fab fa-wordpress fa-1x"></i></a>
-                            <a class="email" href="mailto:tshalom01@gmail.com?cc=info@shalomt.me&subject=I%20need%20help%20with&body=Hello%20Shalom%2C%0D%0A%0D%0AMy%20name%20is%20_%20.%20I%20am%20contacting%20you%20because"><i class="fas fa-envelope fa-1x"></i></a>
+                            <a href="https://twitter.com/taiwo_shalom class="twitter"><i class="fab fa-twitter fa-1x"></i></a>
+                            <a href="https://www.linkedin.com/in/shalom-taiwo-959710160/" class="linkedin"><i class="fab fa-linkedin-in fa-1x"></i></a>
+                            <a href="https://profiles.wordpress.org/shalomt/" class="wordpress"><i class="fab fa-wordpress fa-1x"></i></a>
+                            <a class="email" href="mailto:info@shalomt.me?cc=tshalom01@gmail.com&subject=I%20need%20help%20with&body=Hello%20Shalom%2C%0D%0A%0D%0AMy%20name%20is%20_%20.%20I%20am%20contacting%20you%20because"><i class="fas fa-envelope fa-1x"></i></a>
                         </div>
                     </div>
                     <div class="home_column_two">
@@ -149,8 +149,8 @@
                         </p>
                         </div>
                         <div class="wbps_links">
-                        <button class="wbps_doc_link1">Download on WordPress.org</button>
-                        <button class="wbps_doc_link2"><a href="/wbps.html">How it works</a></button>
+                        <button class="wbps_doc_link1">Coming soon</button>
+                        <button class="wbps_doc_link2"><a href="#">How it works - coming soon</a></button>
                         </div>
                     </div>
                     <div class="wbps_logo">
@@ -176,10 +176,10 @@
             <div class="contact_bg">
             <div class="contact_details">
                 <div class="contact_options">
-                    <p class="cf_email"><i class="fas fa-envelope fa-2x"></i><a href="mailto:tshalom01@gmail.com">tshalom01@gmail.com</a></p>
-                    <p class="cf_wordpress"><i class="fab fa-wordpress fa-2x"></i><a href="http://wordpress.org" target="_blank" rel="noopener noreferrer">@Shalomt</a></p>
-                    <p class="cf_twitter"><i class="fab fa-twitter fa-2x"></i><a href="http://twitter.com/" target="_blank" rel="noopener noreferrer">@taiwo_shalom</a></p>
-                    <p class="cf_linkedin"><i class="fab fa-linkedin-in fa-2x"></i><a href="http://linkedin.com" target="_blank" rel="noopener noreferrer">Shalom Taiwo</a></p>
+                    <p class="cf_email"><i class="fas fa-envelope fa-2x"></i><a href="mailto:info@shalomt.me">info@shalomt.me</a></p>
+                    <p class="cf_wordpress"><i class="fab fa-wordpress fa-2x"></i><a href="https://profiles.wordpress.org/shalomt/" target="_blank" rel="noopener noreferrer">@Shalomt</a></p>
+                    <p class="cf_twitter"><i class="fab fa-twitter fa-2x"></i><a href="https://twitter.com/taiwo_shalom" target="_blank" rel="noopener noreferrer">@taiwo_shalom</a></p>
+                    <p class="cf_linkedin"><i class="fab fa-linkedin-in fa-2x"></i><a href="https://www.linkedin.com/in/shalom-taiwo-959710160/" target="_blank" rel="noopener noreferrer">Shalom Taiwo</a></p>
                 </div>
                 <div class="contact_form">
                     <h1>Send Me a Message</h1>
@@ -209,7 +209,7 @@
         </main>
 
         <footer>
-            <div class="copyright">&copy; Copyright 2022, Shalom Taiwo | All Rights Reserved</div>
+            <div class="copyright">&copy; Copyright 2022, Sht | All Rights Reserved</div>
         </footer>
         <script src="script.js" async defer></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
