Plugin name change

--- a/index.html
+++ b/index.html
@@ -141,16 +141,16 @@
                 <div id="plugins" class="plugin_section">
                     <div class="wbps_page">
                         <div class="wbps_desc">
-                        <h3 class="wbps_h3">Woocommerce Book Preview</h3>
+                        <h3 class="wbps_h3">Book Preview for WooCommerce</h3>
                         <p class="wbps_short_desc">
-                            With Woocommerce Book Preview, show your customers a 
+                            With Book Preview, show your customers a 
                             PDF or text-based preview of your books to increase your 
                             conversion rate and get more sales.
                         </p>
                         </div>
                         <div class="wbps_links">
                         <button class="wbps_doc_link1">Coming soon</button>
-                        <button class="wbps_doc_link2"><a href="#">How it works - coming soon</a></button>
+                        <button class="wbps_doc_link2"><a href="https://wpbpreview.com/">View Website</a></button>
                         </div>
                     </div>
                     <div class="wbps_logo">
