--- a/index.html
+++ b/index.html
@@ -21,32 +21,35 @@
     <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.7.2/css/all.css">
     <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
     <link rel="stylesheet" href="https://s.pageclip.co/v1/pageclip.css" media="screen">
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
     <body>
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <div class="header">
+        <div class="header position-sticky">
         <header>
-            <div class="nav_logo">
-                <a href="/index.html"><img class="logo" src="assets/shalomt_logo.png" alt="shalomt_logo"></a>
-            </div>
-            <nav class="menu">
-                <ul class="desktop_menu">
-                    <li><a href="/index.html">Home</a></li>
-                    <li><a href="#skills">What I do</a></li>
-                    <li><a href="#plugins">Plugins</a></li>
-                    <li id="contact_pop_up" ><button>Contact me</button></li>
-                </ul>
-                <ul class="mobile_menu">
-                    <li><a href="/index.html">Home</a></li>
-                    <li><a href="#skills">Skills</a></li>
-                    <li><a href="#plugins">Plugins</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-            </nav>
-        
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+                <div class="container-fluid">
+                  <a class="navbar-brand" href="#">
+                    <img src="./assets/shalomt_logo.png" alt="" width="140" height="60" class="d-inline-block align-text-top">
+                  </a>
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse desktop-nav" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                      <a class="nav-link active" aria-current="page" href="#">Home</a>
+                      <a class="nav-link" href="#skills">What I do</a>
+                      <a class="nav-link" href="#plugins">Plugins</a>
+                      <a class="nav-link" href="#projects">Projects</a>
+                    </div>
+                    <a class="d-flex btn-contact-link" href="#contact">
+                        <button class="btn btn-contact" type="button">Contact us</button>
+                      </a>
+                  </div>
+                </div>
+              </nav>
         </header>
     </div>
 
@@ -211,6 +214,7 @@
         </footer>
         <script src="script.js" async defer></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 <script src="https://s.pageclip.co/v1/pageclip.js" charset="utf-8"></script>
 
     </body>
