New styling to portforlio site

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
         <link rel="stylesheet" href="./css/subscribe.css">
         <link rel="stylesheet" href="general.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.7.2/css/all.css">
-    <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-    <link rel="stylesheet" href="https://s.pageclip.co/v1/pageclip.css" media="screen">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.7.2/css/all.css">
+        <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+        <link rel="stylesheet" href="https://s.pageclip.co/v1/pageclip.css" media="screen">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
     <body>
         <!--[if lt IE 7]>
@@ -45,7 +45,7 @@
                       <a class="nav-link" href="#projects">Projects</a>
                     </div>
                     <a class="d-flex btn-contact-link" href="#contact">
-                        <button class="btn btn-contact" type="button">Contact us</button>
+                        <button class="btn btn-contact" type="button">Contact Me</button>
                       </a>
                   </div>
                 </div>
@@ -58,37 +58,31 @@
                 <div id="home" class="home_cta">
                     <div class="home_column_one">
                         <div class="title_name">
-                        <p class="my_name">Hi, I'm Shalom,<br><span class="design_name">a Web Developer</span></p>
+                        <p class="my_name">Hi, I'm Shalom,<br><span class="design_name">Web Developer</span></p>
                         </div>
-                        <p class="about_me">Web developer with a love for WordPress and a passion for simplicity.
-                            I am always developing and motivated to create meaningful work.</p>
+                        <p class="about_me">...</p>
                         <div class="socials">
                             <a href="https://twitter.com/taiwo_shalom" class="twitter"><i class="fab fa-twitter fa-1x"></i></a>
                             <a href="https://www.linkedin.com/in/shalom-taiwo-959710160/" class="linkedin"><i class="fab fa-linkedin-in fa-1x"></i></a>
-                            <a href="https://profiles.wordpress.org/shalomt/" class="wordpress"><i class="fab fa-wordpress fa-1x"></i></a>
+                            <a href="https://github.com/shalomtaiwo" class="github"><i class="fab fa-github fa-1x"></i></a>
                             <a class="email" href="mailto:info@shalomt.com?cc=tshalom01@gmail.com&subject=I%20need%20help%20with&body=Hello%20Shalom%2C%0D%0A%0D%0AMy%20name%20is%20_%20.%20I%20am%20contacting%20you%20because"><i class="fas fa-envelope fa-1x"></i></a>
                         </div>
                     </div>
-                    <div class="home_column_two">
-                        <img class="proile_img" src="assets/shalomt_profile_cartoon.png" alt="" srcset="">
-                    </div>
                 </div>
-                <div id="skills" class="skills_column">
+                <!-- <div id="skills" class="skills_column">
                     <div class="col_title">
-                        <p class="serv_colhead">Skills</p>
+                        <p class="serv_colhead">Projects</p>
                     </div>
                     <div class="skills">
                         <div class="serv_title"><i class="fas fa-long-arrow-alt-left fa-1x"></i>  What I do</div>
                         <div class="s_bg">
-                        <div class="s_col1">
-                        <div class="support">
-                            <p class="ts">Technical<br>Support</p>
+                            
                         </div>
-                        <div class="develop">
-                            <p class="wpdev">WordPress<br>Development</p>
-                        </div>
-                        </div>
-                        </div>
+                    </div>
+                </div> -->
+                <div id="skills" class="skills_column">
+                    <div class="col_title">
+                        <p class="serv_colhead">Skills</p>
                     </div>
                     <div id="progress_bar" class="skills_progress">
                         <div class="professional">
@@ -104,17 +98,28 @@
                                 </div>
                                 JavaScript
                                 <div class="meter">
-                                    <span style="width:30%;"><span id="anim_p_3" class="progress"></span></span>
+                                    <span style="width:50%;"><span id="anim_p_3" class="progress"></span></span>
                                 </div>
                                 CSS
                                 <div class="meter">
-                                    <span style="width:60%;"><span id="anim_p_4" class="progress"></span></span>
+                                    <span style="width:65%;"><span id="anim_p_4" class="progress"></span></span>
                                 </div>
                                 HTML
                                 <div class="meter">
-                                    <span style="width:70%;"><span id="anim_p_5" class="progress"></span></span>
+                                    <span style="width:75%;"><span id="anim_p_5" class="progress"></span></span>
                                 </div>
-                                
+                                REACTJS
+                                <div class="meter">
+                                    <span style="width:55%;"><span id="anim_p_5" class="progress"></span></span>
+                                </div>
+                                TYPESCRIPT
+                                <div class="meter">
+                                    <span style="width:40%;"><span id="anim_p_5" class="progress"></span></span>
+                                </div>
+                                FIREBASE
+                                <div class="meter">
+                                    <span style="width:60%;"><span id="anim_p_5" class="progress"></span></span>
+                                </div>
                             </div>
                         </div>
                         <div class="people">
@@ -129,6 +134,9 @@
                                     <li>Assertiveness</li>
                                     <li>Time management</li>
                                     <li>Patience</li>
+                                    <li>Flexibility</li>
+                                    <li>Detail Oriented</li>
+                                    <li>Deadline Driven</li>
                                 </ul>
                             </div>
                         </div>
@@ -153,7 +161,7 @@
                         </div>
                         <div class="wbps_links">
                         <a href="https://wordpress.org/plugins/book-preview-for-woocommerce/"><button class="wbps_doc_link1">Download here</button></a>
-                        <a href="https://shalomt.com/plugins/wpbookpreview/"><button class="wbps_doc_link2">View Website</button></a>
+                        <a href="https://wpbpreview.com/home/"><button class="wbps_doc_link2">View Website</button></a>
                         </div>
                     </div>
                     <div class="wbps_logo">
@@ -163,7 +171,7 @@
             </div>
 <div id="subs-bg">
     <div>
-        <h1>Subscribe to our Newsletter</h1>
+        <h1>Subscribe to Blog</h1>
     </div>
 <div class="subs-wrapper">
     <form action="https://send.pageclip.co/tKczHfTD79GkjVMF4dQ5lz279qNSzxcD" class="pageclip-form" method="post">
@@ -175,7 +183,6 @@
 </div>
 <div class="subs_text"></div>
             </div>
-            <div id="contact" style="padding: 10px;"></div>
             <div class="contact_bg">
             <div class="contact_details">
                 <div class="contact_options">
